--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@
 :root{
     --color-black:  #000;
     --color-white:  #fff;
-    --color-orange: #e58e26;
+    --color-orange: #b28756;
     --color-grayL:  #ccc;
     --color-grayD:  #333;
 }
@@ -23,8 +23,7 @@ body{
 }
 
 
-/* CABEÇÃLHO */
-
+/* CABEÇALHO */
 header{
     background-color: var(--color-black);
     color: var(--color-white);
@@ -70,7 +69,7 @@ header{
     color: var(--color-white);
     display: flex;
     flex-direction: column;
-    font-size: 2rem;
+    font-size: 1.6rem;
     font-weight: 600;
     height: 10rem;
     justify-content: center;
@@ -91,7 +90,7 @@ header{
     width: 0px;
     height: 0.3rem;
     margin-bottom: 0.5rem;
-    transition: width 0.3s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    transition: width 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
 
 .header__menu li a:hover::before{
@@ -105,7 +104,7 @@ header{
     width: 0px;
     height: 0.3rem;
     margin-top: 0.5rem;
-    transition: width 0.3s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    transition: width 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
 
 .header__menu li a:hover::after{
@@ -116,5 +115,101 @@ header{
 /* BANNER PRINCIPAL */
 .banner{
     background-color: var(--color-grayD);
+    background-image: url('/assets/images/bg.jpg');
+    background-position: bottom;
     height: calc(100vh - 10rem);
+    overflow: hidden;
+}
+
+.banner .banner__sliders{
+    width: 1000vw;
+    height: 100%;
+ 
+}
+
+.banner .banner__slide{
+    background-color: rgba(0, 0, 0, 0.6);
+    display: inline-block;
+    width: 100vw;
+    height: 100%;
+    
+}
+
+.banner .slide__content{
+    color: var(--color-white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+}
+
+.banner .slide__content h1{
+    font-size: 9rem;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.banner .slide__content h1 span{
+    color: var(--color-orange);
+}
+
+.banner .slide__content h2{
+    text-transform: uppercase;
+    margin-top: 2rem;
+    font-size: 2.5rem;
+}
+
+.banner .slide__content button{
+    background-color: transparent;
+    border-radius: 3rem;
+    border: 0.1rem solid var(--color-orange);
+    color: var(--color-white);
+    cursor: pointer;
+    display: block;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-top: 5.5rem;
+    overflow: hidden;
+    padding: 1.5rem  6rem;
+    position: relative;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.banner .slide__content button::before{
+    background: var(--color-orange);
+    bottom: 0px;
+    content: "";
+    filter: blur(0.8rem);
+    left: -3.2rem;
+    position: absolute;
+    top: 0px;
+    transform: rotate(-16deg);
+    width: 0.8rem;
+}
+
+.banner .slide__content button:hover::before{
+    left: calc(100% + 3.2rem);
+    transition: 0.75s;
+}
+
+.banner__circles__area{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 3rem;
+    margin-top: -5rem;
+    position: absolute;
+}
+
+.banner__circles{
+    border: 0.2rem solid var(--color-orange);
+    border-radius: 5rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: 0px 1rem;
+
+    
 }
