about-us initial

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -164,8 +164,8 @@ header{
     font-size: 2.3rem;
 }
 
-.banner .slide__content button{
-    background-color: transparent;
+.button{
+    background-color:  var(--color-orange);
     border-radius: 3rem;
     border: 0.1rem solid var(--color-orange);
     color: var(--color-white);
@@ -175,14 +175,14 @@ header{
     font-weight: 600;
     margin-top: 5.5rem;
     overflow: hidden;
-    padding: 1.5rem  6rem;
+    padding: 1.5rem  5rem;
     position: relative;
     text-decoration: none;
     text-transform: uppercase;
 }
 
-.banner .slide__content button::before{
-    background: var(--color-orange);
+.button::before{
+    background: var(--color-white);
     bottom: 0px;
     content: "";
     filter: blur(0.8rem);
@@ -193,7 +193,7 @@ header{
     width: 0.8rem;
 }
 
-.banner .slide__content button:hover::before{
+.button:hover::before{
     left: calc(100% + 3.2rem);
     transition: 0.75s;
 }
@@ -220,7 +220,7 @@ header{
     background-color: var(--color-orange);
 }
 
-/* ESTRUTA PADRÃO DO CONTEÚDO */
+/* ESTRUTURA PADRÃO DO CONTEÚDO */
 .default{
     padding: 4rem 0px;
 }
@@ -229,32 +229,31 @@ header{
 .default .section__desc{
     text-align: center;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .default .section__title{
-    font-size: 2rem;
+    font-size: 2.8rem;
 }
 
 .default .section__desc{
     color: var(--color-grayM);
-    font-size: 1.1rem;
-    margin-top: 0.5rem;
+    font-size: 1.6rem;
+    margin-top: 1rem;
     margin-bottom: 4rem;
 }
 
 .default .section__body{
-    background-color: #CCC;
     max-width: 1580px;
     margin: auto;
-    min-height: 100px
 }
 
 .default--light{
     background-color: var(--color-grayL2);
 }
 
-.default--light .section__title{
+.default--light .section__title,
+.default--light .section__body{
     color: var(--color-black);
 }
 
@@ -262,6 +261,43 @@ header{
     background-color: var(--color-black);
 }
 
-.default--dark .section__title{
+.default--dark .section__title,
+.default--dark .section__body{
     color: var(--color-white);
+}
+
+
+
+
+
+/* ÁREAS ESPECIFICAS  */
+/* ABOUT-US */
+.section-about-us{
+    display: flex;
+    margin-bottom: 4.5rem;
+}
+
+.section__left{
+    flex: 1;
+}
+
+.section__left p{
+    font-size: 1.6rem;
+    line-height: 29px;
+}
+
+.section__left .button--section{
+    margin-top: 3.5rem;
+    padding: 1.3rem  5rem;
+}
+
+.section__right{
+    width: 760px;
+    
+}
+
+.section__right img{
+    width: 440px;
+    box-shadow: 5px 10px 10px var(--color-grayM);
+    margin-left: 50px;
 }
