--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -690,3 +690,117 @@ header{
 .button--plans:hover{
     background-color: var(--color-orange);
 }
+
+.active-plan{
+    background-color: var(--color-orange);
+}
+
+
+/* PREMIUN */
+.default--light--premiun{
+    background-color: var(--color-white);
+
+}
+
+
+.premiun__area{
+    border-bottom: 1px solid var(--color-grayL);
+    display: flex;
+    justify-content: center;
+    height: auto;
+    margin-top: 5rem;
+}
+
+.premiun__left{
+    flex: 1;
+    text-align: center;
+}
+
+.premiun__left img{
+    padding-left: 10rem;
+}   
+
+.premiun__right{
+    flex: 1;
+}
+
+.premiun__left,
+.premiun__right{
+    margin-bottom: 7rem;
+}
+
+.feature__area{
+    display: flex;
+
+}
+
+.feature__items{
+    margin-bottom: 2rem;
+}
+
+.feature_icon{
+    margin-right: 3rem;
+}
+
+.feature_name{
+    color: var(--color-black);
+    font-size: 2rem;
+    font-weight: 600;
+    padding-bottom: 0.5rem;
+    text-transform: uppercase;
+}
+
+.feature_desc{
+    color: var(--color-grayM);
+    font-size: 1.2rem;
+    max-width: 47rem;
+    line-height: 2.4rem;
+}
+
+.feature__info h6{
+    color: var(--color-grayM);
+    font-size: 1.5rem;
+    font-weight: normal;
+    text-transform: uppercase;
+    margin-top: 1.2rem;
+    line-height: 3rem;
+}
+
+.feature__info h6::before{
+    content: '';
+    display: inline-block;
+    width: 13px;
+    height: 1.5px;
+    margin-right: 0.8rem;
+    background: var(--color-grayM);
+    vertical-align: middle;
+}
+
+.section-premiun .button{
+    padding: 1.3rem 5rem;
+    margin: auto;
+    margin-top: 3rem;
+    margin-bottom: 3.4rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* SCROLLBAR */
+::-webkit-scrollbar{
+    width: 7px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--color-orange);
+    border-radius: 1px;
+    height: 40rem;
+}
