--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -258,6 +258,7 @@ header{
 
 .default--light{
     background-color: var(--color-grayL2);
+    padding-top: 5rem;
 }
 
 .default--light .section__title,
@@ -841,14 +842,14 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2rem 0;
-    border-bottom: 1px solid var(--color-grayM);
+    padding: 3rem 0;
+    border-bottom: 1px solid var(--color-grayL);
 }
 
 .share__img{
-    width: 3.5rem;
-    height: 3.5rem;
-    margin-right: 0.8rem;
+    width: 3.4rem;
+    height: 3.4rem;
+    margin-right: 0.6rem;
 }
 
 .share__img img{
@@ -858,7 +859,7 @@ header{
 
 .share__desc{
     color: var(--color-grayM);
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: bold;
     text-transform: uppercase;
     margin-right: 7rem;
@@ -868,9 +869,9 @@ header{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 3.5rem;
-    height: 3.5rem;
-    margin-right: 1rem;
+    width: 3.3rem;
+    height: 3.3rem;
+    margin-right: 0.8rem;
     border-radius: 20px;
 }
 
@@ -898,8 +899,50 @@ header{
     color: var(--color-grayM);
     font-size: 1.1rem;
     font-weight: 700;
+    margin-right: 3.5rem;
+}
+
+
+/* CONTACT US */
+.section-contact-us{
+    display: flex;
+    justify-content: center;
+    margin-top: 8rem;
+}
+
+.name__email input{
+    border: none;
+    border-bottom: 2px solid var(--color-grayM);
+    width: 30rem;
+    height: 3rem;
+    padding: 2rem 0;
+    outline: 0;
+    background-color: transparent;
+}
+
+.name__email input:first-child{
     margin-right: 4rem;
 }
+
+.subject input{
+    width: 100%;
+    margin-top: 5rem;
+}
+
+.button__form{
+    display: flex;
+    justify-content: center;
+}
+
+.button--form{
+    padding: 1.3rem  4rem;
+}
+
+
+
+
+
+
 
 /* SCROLLBAR */
 ::-webkit-scrollbar{
