--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -939,9 +939,51 @@ header{
 }
 
 
+/* MAP */
+.default--map{
+    background-image: url(/assets/images/map.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 3.5rem 0;
+}
+
+.section-map{
+    width: 100vw;
+    max-width: 1580px;
+}
 
 
+.map__info{    
+    width: 50%;
+    max-width: 60rem;
+    height: 39rem;
+    background-color: var(--color-white);
+    padding-top: 6rem;
+    padding-left: 5rem;
 
+}
+
+.map__items{
+    display: flex;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.map__img{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 3.3rem;
+    height: 3.3rem;
+    background-color: var(--color-grayM);
+    border-radius: 20px;
+    margin-right: 1.5rem;
+}
+
+.map__items span{
+    font-size: 1.3rem;
+    color: var(--color-grayM2);
+}
 
 
 /* SCROLLBAR */
