--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -255,7 +255,6 @@ header{
 .default .section__body{
     max-width: 1580px;
     margin: auto;
-    margin: 0 4rem;
 }
 
 .default--light{
@@ -283,6 +282,8 @@ header{
 /* ABOUT-US */
 .section-about-us{
     display: flex;
+    margin-left: 3rem;
+    margin-right: 3rem;
     margin-bottom: 4.5rem;
 }
 
@@ -317,6 +318,8 @@ header{
 .section-services{
     display: flex;
     margin-top: 4rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
     margin-bottom: 2rem;
 }
 
@@ -626,9 +629,9 @@ header{
 
 .section-price-area{
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1580px;
+    justify-content: center;
+    margin-left: 3rem;
+    margin-right: 3rem;
 }
 
 .section-price-table{
@@ -639,6 +642,10 @@ header{
     min-height: 39rem;
     margin-right: 3rem;
     border-radius: 3px;
+}
+
+.section-price-table:last-child{
+    margin-right: 0;   
 }
 
 .plans{
@@ -961,8 +968,11 @@ header{
 }
 
 .section-map{
-    width: 100vw;
-    max-width: 1580px;
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    margin-left: 3rem;
+    margin-right: 3rem;
 }
 
 .map__info{    
@@ -1005,8 +1015,9 @@ header{
 
 .section-footer{
     display: flex;
-    width: 100%;
     height: 27rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
 }
 
 .footer__right__area{
@@ -1090,7 +1101,7 @@ header{
 .footer__form .input{
     border: none;
     border-bottom: 2px solid var(--color-grayL);
-    width: 30rem;
+    width: 80%;
     height: 3rem;
     padding: 2rem 0;
     outline: 0;
