--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -100,7 +100,7 @@ header{
     width: 0px;
     height: 0.3rem;
     margin-bottom: 0.5rem;
-    transition: width 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    transition: width .1s cubic-bezier(0.250, 0.460, 0.450, 0.940);
 }
 
 .header__menu li a:hover::before{
@@ -114,7 +114,7 @@ header{
     width: 0px;
     height: 0.3rem;
     margin-top: 0.5rem;
-    transition: width 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    transition: width .1s cubic-bezier(0.250, 0.460, 0.450, 0.940);
 }
 
 .header__menu li a:hover::after{
