--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -859,15 +859,19 @@ header{
     border-bottom: 1px solid var(--color-grayL);
 }
 
-.share__img{
-    width: 3.4rem;
-    height: 3.4rem;
-    margin-right: 0.6rem;
+.social__info__area{
+    display: flex;
+    align-items: center;
 }
 
 .share__img img{
     padding-top: 0.5rem;
 
+}
+
+.share__area{
+    display: flex;
+    align-items:center ;
 }
 
 .share__desc{
@@ -876,6 +880,7 @@ header{
     font-weight: bold;
     text-transform: uppercase;
     margin-right: 7rem;
+    margin-left: 2rem;
 }
 
 .share__img__social{
@@ -1136,7 +1141,7 @@ header{
 }
 
 
-/* RESPONSIVE */
+/* RESPONSIVE TABLET*/
 @media (min-width: 450px) and (max-width: 800px){
     .header__img img{
         width: 11rem;
@@ -1294,7 +1299,7 @@ header{
         padding: 0;
     }
 
-    .premiun__right{
+    .premiun__area .premiun__right{
         flex: 1;
         margin: 0 auto;
     }
@@ -1308,6 +1313,16 @@ header{
         max-width: 70rem;
         margin: 0 auto;
         gap: 5rem;
+    }
+
+
+
+    .default--light .section-contact-us{
+        flex-direction: row
+    }
+
+    .default--light .section-contact-us .name__email input:first-child{
+        margin-right: 3rem;
     }
 
     .section-map{
@@ -1332,6 +1347,7 @@ header{
 
     .footer__form .input{
         margin-top: 2rem;
+        width: 60%;
     }
 
     .footer__form .button{
@@ -1347,11 +1363,331 @@ header{
         text-align: start;
         overflow: none;
         margin: 4rem 0;
-        
     }
 
     .footer__right__area .copy__right{
         margin-top: 4rem;
     }
 
+}
+
+
+/* RESPONSIVE MOBILE*/
+@media (max-width: 450px){
+    .header__img img{
+        width: 11rem;
+    }
+
+    .nav-mobile{
+        position: absolute;
+        z-index: 999;   
+        background-color: rgba(0, 0, 0, 0.9);
+        width: 80vw;
+        height: calc(100vh - 10rem);
+        top: 10rem;
+        right: 0;
+        overflow: hidden;
+        display: none;
+    }
+
+    .menu-hamburguer{
+        display: block;
+        width: 3rem;
+        margin-right: 4rem;
+    }
+
+    .header__menu ul{
+        flex-direction: column;
+        align-items: flex-start;        
+    }
+
+    .header__menu li{
+        width: 100%;
+    }
+
+    .header__menu li a{
+        font-size: 1.6rem;
+        font-weight: bold;
+        height: 7rem;
+        margin-left: 3rem;
+    }
+    
+    .header__menu li .active-mobile{
+        color: var(--color-orange);
+    }
+
+    .header__menu li:hover{
+        background-color: var(--color-orange);
+        width: 100%;
+        height: 100%;
+    }
+
+    .header__menu li a::before,
+    .header__menu li a::after{
+        content: none;
+    }
+
+    .banner .slide__content h1{
+        font-size: 3rem;
+    }
+
+    .banner .slide__content h2{
+        font-size: 1.8rem;
+    }
+
+    .banner .slide__content .button{
+        font-size: 1rem;
+        padding: 1.3rem 4.5rem;
+    }
+
+    .section-about-us{
+        flex-direction: column-reverse;
+    }
+
+    .section__right{
+        width: auto;
+        margin: 0 auto;
+    }
+
+    .section__right img{
+        margin: 0;
+        width: 25rem;
+    }
+
+    .section__left{
+        margin: 4rem 1rem 0rem 1rem;
+    }
+
+    .section__left .button--section{
+        margin: 0 auto;
+        margin-top: 3.5rem;
+    }
+
+    .section-services{
+        flex-wrap: wrap;
+    }
+
+    .section__service{
+        min-width: 100%;
+        border: none;
+        margin-bottom: 3rem;
+    }
+    
+    .section__service:last-child{
+        border: none;
+    }
+
+    .section__service:nth-child(3),
+    .section__service:nth-child(4){
+        margin-bottom: 0;
+    }
+
+    .section__filters{
+        padding: 0;
+        margin: 0 2rem;
+    }
+
+    .section__filters li{
+        font-size: 1rem;
+    }
+
+    .section-team{
+        max-width: 27rem;
+    }
+
+    .section-team .slide__content{
+        max-width: 90%;
+    }
+
+    .section-team .banner__slide{
+        width: 30rem;
+    }
+
+    .section__testimonials__quote{
+        margin-right: 2rem;
+        margin-left: 2rem;
+    }
+
+    .companies__area{
+        flex-direction: column;
+    }
+
+    .companies__img{
+        margin-bottom: 2rem;        
+    }
+
+    .companies__img:last-child{
+        margin-bottom: 0;   
+    }
+
+    .companies__img img{
+        width: 7rem;
+    }
+
+    .section__body--mobile{
+        display: flex;
+        justify-content: center
+    }
+
+    .section-price-area{
+        flex-wrap: wrap;
+        max-width: 60rem;
+        gap: 3rem;
+
+    }
+
+    .section-price-table{
+        width: 27rem;
+        height: auto;
+        margin: 0;
+    }
+
+    .default--light--premiun{
+        padding-bottom: 3rem;    
+    }
+
+    .premiun__area{
+        flex-direction: column;
+    }
+
+    .premiun__left{
+        margin: 0 auto;
+        margin-bottom: 7rem;
+    }
+
+    .premiun__left img{
+        width: 28rem;
+        padding: 0;
+        margin-left: 2.5rem;
+    }
+
+    .premiun__right{
+        flex: 1;
+        margin: 0 2rem 2rem;
+    }
+
+    .section-premiun .button{
+        margin-bottom: 2rem;
+        padding: 1.3 3.5rem;
+    }
+
+    .section-facts{
+        flex-wrap: wrap;
+        max-width: 70rem;
+        margin: 0 auto;
+        gap: 5rem;
+    }
+
+    .section-share{
+        flex-direction: column;
+    }
+
+    .social__info__area{
+        flex-direction: column;
+        margin: 0 auto;
+        margin-right: 2.5rem;
+    }
+
+    .social__info__area:last-child{
+        margin-right: 0;
+    }
+
+    .share__img__social{
+        margin: 0;
+    }
+    
+    .section-share .share__img:first-child{
+        display: none;
+    }
+
+    .section-share .share__desc{
+        margin: 0;
+        margin-bottom: 1.6rem;
+    }
+
+    .share__desc_count{
+        margin: 0 auto;
+        margin-top: 0.5rem;
+    }
+
+    .section-contact-us{
+        flex-direction: column;
+    }
+
+    .form__area{
+        margin: 0 4rem 0 4rem;
+    }
+
+    .name__email input{
+        width: 100%;
+    }
+
+    .name__email input:nth-child(1),
+    .name__email input:nth-child(2){
+        margin: 0;
+        margin-bottom: 3rem;
+    }
+
+    .default--map{
+        padding: 0;
+        padding-bottom: 50rem;
+    }
+
+    .section-map{
+        width: auto;        
+        margin: 0;
+    }
+
+    .map__info{
+        width: 100%;
+        padding-left: 1.5rem;
+    }
+
+    .map__items span{
+        max-width: 25rem;
+    }
+
+    .section-footer{
+        justify-content: center;
+        flex-direction: column-reverse;
+        max-width: 60rem;
+        margin: 0 auto;
+        height: auto;
+    }
+
+    .footer__form{
+        /* width: 80%; */
+    }
+
+    .footer__form .input{
+        margin-top: 2rem;
+    }
+
+    .footer__form .button{
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+
+    .footer__left{
+        justify-content: center ;
+    }
+
+    .footer__center{
+        text-align: start;
+        overflow: none;
+        margin: 4rem 2rem;    
+    }
+
+    .footer__right{
+        justify-content: center;
+    }
+
+    .right__items{
+        margin-right: 1rem;
+    }
+
+    .footer__right__area .copy__right{
+        margin-top: 4rem;
+        margin-left: 1rem;
+    }
 }
