--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1504,7 +1504,7 @@ header{
     }
 
     .companies__area{
-        /* flex-direction: column; */
+        justify-content: center;
     }
 
     .companies__img{
@@ -1516,7 +1516,8 @@ header{
     }
 
     .companies__img img{
-        width: 5rem;
+        width: 4rem;
+        margin-right: 1rem;
     }
 
     .section__body--mobile{
